# ifk-smhi

./: .bandit  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  create_pydantic_models.sh  mkdocs.yml  mypy.ini  pyproject.toml  smhi.py
.github/workflows/: github-action-build.yaml  github-action-docs.yaml  github-action-lint.yaml  github-action-md-lint.yaml  github-action-pypi.yaml  github-action-test.yaml  github-action-type.yaml  github-actions-build.yaml  github-actions-test-integration.yaml  github-actions-test-unit.yaml  github-actions-tests.yaml
docs/: index.md  mesan-example.md  mesan-model.md  mesan-reference.md  metfcts-example.md  metfcts-model.md  metfcts-reference.md  metobs-example.md  metobs-model.md  metobs-reference.md  reference.md  smhi-example.md  smhi-reference.md  strang-example.md  strang-model.md  strang-reference.md
docs/assets/: kiruna_snodjup.html
material/partials/: copyright.html
smhi/: constants.py  metobs.json  metobs.py  smhi.py  strang.py
src/smhi/: constants.py  mesan.py  metfcts.py  metobs.py  smhi.py  strang.py  utils.py
src/smhi/models/: mesan.py  mesan_approved.py  mesan_model.py  mesan_parameters.py  mesan_polygon.py  mesan_valid.py  metfcts.py  metfcts_model.py  metobs_data.py  metobs_model.py  metobs_parameters.py  metobs_periods.py  metobs_stations.py  metobs_versions.py  strang.py  strang_model.py  variable_model.py
src_files/: data.csv
test/: test_unit_smhi.py
test/integration/: test_integration_metobs.py  test_integration_smhi.py  test_integration_strang.py
test/unit/: test_unit_metobs.py  test_unit_smhi.py  test_unit_strang.py
tests/fixtures/: STRANG_NONE.csv  STRANG_RESULT_DAILY_2020_01_01_2020_01_02.csv  STRANG_RESULT_HOURLY_2020_01_01_2020_01_02.csv  STRANG_RESULT_MULTIPOINT_2020_01_01_MONTHLY_10.csv  metobs_data.csv  metobs_integration_1.json  metobs_integration_2.json  metobs_integration_22.json  metobs_unit_1.json  metobs_unit_2.json  unit_mesan_point_format.json  unit_mesan_point_format_result.csv  unit_metobs_data.txt
tests/fixtures/mesan/: multipoint.txt  multipoint_data.csv  point.txt  point_data.csv  point_data_info.csv  unit_mesan_multipoint_format.json  unit_mesan_multipoint_format_result.csv
tests/fixtures/metobs/: data.txt  data_csv.csv  data_data.csv  data_data.json  data_model.json  data_parameter.csv  data_parameter.json  data_period.csv  data_period.json  data_station.csv  data_station.json  metobs_integration_1.json  metobs_integration_2.json  metobs_integration_22.json  parameters.txt  parameters_data.json  parameters_model.json  periods.txt  periods_data.json  periods_data_set.json  periods_model.json  periods_set.txt  stations.txt  stations_data.json  stations_model.json  versions.txt  versions_model.json
tests/fixtures/strang/: STRANG_NONE.csv  STRANG_RESULT_DAILY_2020_01_01_2020_01_02.csv  multipoint.txt  multipoint_data.csv  point.txt  point_data.csv  strang_result_hourly_2020_01_01_2020_01_02.csv  strang_result_multipoint_2020_01_01_monthly_10.csv
tests/integration/: test_integration_mesan.py  test_integration_metobs.py  test_integration_smhi.py  test_integration_strang.py
tests/unit/: test_unit_mesan.py  test_unit_metfcts.py  test_unit_metobs.py  test_unit_smhi.py  test_unit_strang.py  text_unit_utils.py  utils.py
