[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ifk-smhi"
version = "0.2.0"
description = "Inspect and get SMHI data."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Anders Nord", email = "dr.anders.nord@gmail.com" },
    { name = "Mladen Gibanica", email = "11275336+mgcth@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = [
    "requests ~= 2.28",
    "pandas ~= 2.2",
    "geopy ~= 2.2",
    "arrow ~= 1.2",
    "shapely ~= 2.0",
    "pydantic ~= 2.6",
    "pandera[mypy] ~= 0.18"
]

[project.urls]
homepage = "https://ingenjorsarbeteforklimatet.se/ifk-smhi/"
documentation = "https://ingenjorsarbeteforklimatet.se/ifk-smhi/"
repository = "https://github.com/Ingenjorsarbete-For-Klimatet/ifk-smhi"

[project.optional-dependencies]
lint = ["ruff ~= 0.3"]
type = ["mypy ~= 1.7", "types-requests ~= 2.31", "pandas-stubs ~= 1.5"]
test = ["pytest ~= 7.1", "coverage ~= 6.5", "pytest-cov ~= 4.0"]
doc = [
    "mkdocs ~= 1.4",
    "mkdocs-material ~= 8.5",
    "mkdocstrings[python] ~= 0.19",
]
dev = [
    "ifk-smhi[lint]",
    "ifk-smhi[type]",
    "ifk-smhi[test]",
    "ifk-smhi[doc]",
    "pre-commit ~= 2.20",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["material"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N", "I"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "arrow"
]
ignore_missing_imports = true
